--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,104 @@
 .login-start{
     padding-top: 120px;
 }
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    background:#F0F2F5;
+    color: #1c1e21;
+    font-weight: normal;
+
+}
+.container{
+    max-width: 992px;
+    margin: 0 auto;
+}
+.row{
+    display: flex;
+
+}
+.justfy{
+    justify-content: space-between;
+}
+.contain-left{
+    max-width: 500px;
+}
+.contain-left h1{
+    color: #1877F2;
+    font-size: 54px;
+    margin-bottom: 25px;
+}
+
+
+.contain-left h2{
+    color: #1C1E21;
+    line-height: 32px;
+    font-weight: 500;
+    margin-bottom: 40px;
+}
+.contain-right{
+    max-width: 450px;
+    margin: auto;
+    text-align: center;
+}
+
+.contain-right form{
+    padding: 15px;
+    width: 400px;
+    height: 350px;
+    background: white;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 2px 18px -1px rgba(0,0,0,0.54); 
+    box-shadow: 0px 2px 18px -1px rgba(0,0,0,0.54);
+}
+.contain-right form input{
+    border-radius: 6px;
+    width: 100%;
+    height: 50px;
+    font-size: 17px;
+    border: 1px solid #dddddd;
+    padding: 0 15px;
+    margin-bottom: 15px;
+}
+.login .ass{
+    background: #1877F2;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+.login .ass:hover{
+    cursor: pointer;
+}
+.create-btn{
+        display: inline-block;
+        padding: 15px;
+        background: #4cd137;
+        margin-top: 20px;
+        width: 200px;
+        border-radius: 5px;
+        font-weight: 700;   
+        
+}
+
+.forgot a{
+    color: #1877F2;
+}
+.forgot a:hover{
+    text-decoration: underline;
+}
+.create-btn a{
+    color: white;
+    margin-top: 10px;
+    padding-top: 10px;
+}
+.aas{
+    padding-top: 20px;
+}
+.aas a{
+    color: black;
+    font-weight: 600;
+}
+.aas a:hover{
+    text-decoration: underline;
+}
