--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,21 @@ footer:hover{
 .link-up:hover{
     color: rgb(64, 187, 16);
 }
+
+@media only screen and (max-width: 768px){
+    .row.justfy {
+        display: flex;
+        flex-direction: column;
+    }
+    .contain-left {
+        text-align: center;
+    }
+    
+    .contain-left {
+        max-width: 383px;
+    }
+    .aas {
+        padding-top: 40px;
+    }
+
+}
